Expand AquaGuard to 1.0.0 with a full check catalog.
Replace the partial listeners with movement, combat, world and player checks, a staff GUI, punishments, webhooks and formula tests. Fix 1.21 attribute lookup, totem and crystal detection, command permissions and freeze holes.

Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>